some fixes for #1.9.4